k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat
  labels:
    io.kompose.service: frontend
spec:
  selector:
    io.kompose.service: frontend
  ports:
    - port: 80
      targetPort: 80
