k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redis
  name: redis
  namespace: chat
spec:
  selector:
    io.kompose.service: redis
  ports:
    - port: 6379
      targetPort: 6379
